--- a/Makefile.software.in
+++ b/Makefile.software.in
@@ -1,6 +1,6 @@
 # vim: noexpandtab:ts=4:sw=4
 
-# Copyright 2015 Carsten Klein
+# Copyright 2015-2016 Carsten Klein
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -115,6 +115,8 @@ cover: clean-build build build-cover check-cover
 deps:
 	@echo "installing local (dev) dependencies..."
 	@npm install
+	# *sigh* npmjs will not install+update at the same time
+	@npm update
 
 
 # installs global dev dependencies
@@ -134,6 +136,27 @@ deps-global:
 		} \
 		console.log(deps.join(' ')); \
     ")
+	# *sigh* npmjs will not install+update at the same time
+	@sudo npm -g update $(shell $(node) -e " \
+		var pkg = require('./package.json'); \
+		var deps = []; \
+        for (var key in pkg.globalDevDependencies) { \
+			var version = pkg.globalDevDependencies[key]; \
+			if (version.indexOf('/') != -1) { \
+				deps.push(version); \
+			} \
+			else { \
+				deps.push('\"' + key + '@' + version + '\"'); \
+			} \
+		} \
+		console.log(deps.join(' ')); \
+    ")
+
+
+deps-global-travis:
+	@echo "installing global dev dependencies (travis)..."
+	@npm -g install $(shell $(node) -e " \
+		var pkg = require('./package.json'); \
 
 
 deps-global-travis:
