--- a/templates/software/package.json
+++ b/templates/software/package.json
@@ -43,7 +43,8 @@
     "esdoc-es7-plugin": ">=0.0.3",
     "esdoc-importpath-plugin": ">=0.0.1",
     "esmake": "coldrye-es/esmake",
-    "glob": ">=6.0.1"
+    "glob": ">=6.0.1",
+    "sinon": ">=1.17.3"
   },
   "globalDevDependencies": {
     "babel": ">=6.3.x",
