fix(software): dist dependencies now use tilde ranges instead of caret ranges special care must be taken still for dependencies with only patch levels such as 0.0.3 as they must be denoted as >=0.0 in the original package descriptor, otherwise npm will not fetch any newer versions

--- a/Makefile.software.in
+++ b/Makefile.software.in
@@ -210,7 +210,7 @@ dist: clean-dist lint cover
 	@echo "creating distribution..."
 	@BABEL_ENV="DIST" babel -d $(dist_dir) $(src_dir) >/dev/null
 	@cp *.md LICENSE $(dist_dir)/ >/dev/null
-	@cat package.json | sed "s/>=/^/" > $(dist_dir)/package.json
+	@cat package.json | sed "s/>=/~/" > $(dist_dir)/package.json
 
 
 # creates the apidocs
