--- a/templates/software/package.json
+++ b/templates/software/package.json
@@ -40,12 +40,13 @@
     "babel-plugin-undeclared-variables-check": ">=6.3.x",
     "babel-preset-es2015": ">=6.3.x",
     "babel-preset-stage-0": ">=6.3.x",
-    "esaver": ">=0.0.3",
-    "esdoc-es7-plugin": ">=0.0.3",
-    "esdoc-importpath-plugin": ">=0.0.1",
+    "chai": ">=3.5.0",
+    "esdoc-es7-plugin": ">=0.0",
+    "esdoc-importpath-plugin": ">=0.0",
     "esmake": "coldrye-es/esmake",
     "glob": ">=6.0.1",
-    "sinon": ">=1.17.3"
+    "sinon": ">=1.17.3",
+    "sinon-chai": ">=2.8.0"
   },
   "globalDevDependencies": {
     "babel-cli": ">=6.3.x",
@@ -56,7 +57,7 @@
     "conventional-changelog": ">=1.0.1",
     "esdoc": ">=0.3.1",
     "eslint": ">=1.3.1",
-    "eslint-config-coldrye": ">=0.0.9",
+    "eslint-config-coldrye": ">=0.0",
     "mocha": ">=2.2.5"
   }
 }
