--- a/Makefile.software.in
+++ b/Makefile.software.in
@@ -328,6 +328,6 @@ update-commons-files:
 
 # updates the changelog
 update-changelog:
-	@conventional-changelog -i CHANGELOG.md -w
+	@conventional-changelog -i CHANGELOG.md -s -p angular
 	@echo "make sure you check the changelog for any duplicates/errors"
 
