fix(software): do not include comments on DIST, use github contributors list

--- a/Makefile.software.in
+++ b/Makefile.software.in
@@ -209,7 +209,8 @@ deps-global-travis:
 # creates the distribution
 dist: clean-dist lint cover
 	@echo "creating distribution..."
-	@BABEL_ENV="DIST" babel -d $(dist_dir) $(src_dir) >/dev/null
+# sigh: having to use --no-comments here since babel-cli overrides that .babelrc setting
+	@BABEL_ENV="DIST" babel --no-comments -d $(dist_dir) $(src_dir) >/dev/null
 	@cp *.md LICENSE $(dist_dir)/ >/dev/null
 	@cat package.json | sed "s/>=/~/" > $(dist_dir)/package.json
 
