--- a/templates/software/package.json
+++ b/templates/software/package.json
@@ -55,6 +55,7 @@
     "babel-istanbul": ">=0.3.20",
     "babel-traverse": ">=6.3.19",
     "conventional-changelog-cli": ">=1.1.1",
+    "conventional-changelog-coldrye": ">=0.0",
     "esdoc": ">=0.3.1",
     "eslint": "<2.3.0",
     "eslint-config-coldrye": ">=0.0",
